# raytracer-rs

./: .gitignore  Cargo.toml  LICENSE  Readme.md
example/: cannon.rs  cannon_ppm.rs  matrices.rs
src/: canvas.rs  color.rs  drawable.rs  iterator.rs  lib.rs  macros.rs  main.rs  matrix.rs  ray.rs  space.rs  util.rs
src/matrix/: macros.rs  ops.rs  transformations.rs
