[package]
name = "raytracer"
version = "0.1.0"
authors = ["Zach Moazeni <zach.moazeni@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "raytracer"
path = "src/lib.rs"

[[example]]
name = "cannon"
path = "example/cannon.rs"

[[example]]
name = "cannon_ppm"
path = "example/cannon_ppm.rs"

[dependencies]
